[package]
name = "osmquadtree_rust_bindings"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
osmquadtree = { git = "https://github.com/jharris2268/osmquadtree-rust.git", branch = "main" }
simple-protocolbuffers = { git = "https://github.com/jharris2268/simple-protocolbuffers.git", branch = "main" }
channelled-callbacks = { git = "https://github.com/jharris2268/channelled-callbacks.git", branch = "main" }


[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
