[package]
name = "osmquadtree_rust_bindings"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
osmquadtree = { git = "https://github.com/jharris2268/osmquadtree-rust.git", branch = "main", features = ["python"] }
#osmquadtree = { path = "/home/james/rust/osmquadtree/", features = ["python"] }

simple-protocolbuffers = { git = "https://github.com/jharris2268/simple-protocolbuffers.git", branch = "main" }
channelled-callbacks = { git = "https://github.com/jharris2268/channelled-callbacks.git", branch = "main" }

osmquadtree-geometry = { git = "https://github.com/jharris2268/osmquadtree-geometry.git", branch = "main" }
#osmquadtree-geometry = { path = "/home/james/rust/osmquadtree-geometry/" }

serde_json = "*"

pyo3 = { version = "0.23", features = ["extension-module"]}

#[dependencies.pyo3]
#version = "0.13.2"
#features = ["extension-module"]
